@@ -4,6 +4,7 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/02/12
+	* Fixed Resurrect Homunculus and Wedding skills failing. [Skotlex]
 	* A bit more work on Ticket #41.
 	* Added 'r' (variable reference) to the script argument definitions.
 	* Added a simple define for suspitious actions. (empty at the moment)
